mail and code message

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -77,9 +77,11 @@
       <div class="row g-3">
         <div class="col-md-9">
           <input required type="email" id="email" name="email" class="form-control" aria-describedby="emailHelp" placeholder="Введите вашу почту"/>
+          <p id="emailMessage"></p>
+          <div id="codeAgainMassage"></div>
         </div>
         <div class="col-md-3" >
-          <button type="submit" class="btn btn-secondary">Получить код</button>
+          <button type="submit" id="codeSendButton" class="btn btn-secondary">Получить код</button>
         </div>
       </div>
     </div>
@@ -101,8 +103,30 @@
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
+  var element = document.getElementById('email');
+  element.addEventListener('input', function() {
+    if (state === "true") alert("почта изменилась")
+  });
+</script>
+<script>
+  const timerVal = document.getElementById('codeAgainMassage');
+  function initTimer() {
+    let seconds = 10;
+    const timer = setInterval(() => {
+      timerVal.textContent = `Письмо успешно отправлено! Запросить следующее можно через ${seconds} секунд`;
+      if (seconds === 0) {
+        timerVal.textContent = "";
+        document.getElementById('email').disabled = false;
+        document.getElementById('codeSendButton').disabled = false;
+        clearInterval(timer);}
+      seconds -= 1;
+    }, 1000);
+  }
+  var state = "false";
   $(document).ready(function() {
     $("#registrationForm").submit(function (event) {
+      document.getElementById('email').disabled = true;
+      document.getElementById('codeSendButton').disabled = true;
       event.preventDefault(); // Предотвращаем отправку формы по умолчанию
       // Ответ от сервера об успешной регистрации
       // Отправляем письмо на указанный email
@@ -120,10 +144,20 @@
             type: "POST",
             data: formData,
             success: function (emailResponse) {
+              if (emailResponse === "Success") {
+                //document.getElementById('emailMessage').textContent = "Письмо успешно отправлено. Проверьте почту!";
+                initTimer();
+              }
+              else{
+                document.getElementById('emailMessage').textContent = "Ошибка отправки сообщения. Попробуйте снова!";
+                //document.getElementById('email').disabled = false;
+              }
             }
           });
         }
           else{
+            //document.getElementById('email').disabled = false;
+            document.getElementById('emailMessage').textContent = "Данный email уже зарегистрирован"
 
           }
         }
@@ -202,11 +236,16 @@
 </script>
 
 </body>
-<div class="footer container-fluid">
-  <div class="footer-content container">
-    <div class="row">
-      <p>© 2023 Мой сайт. Все права защищены.</p>
+<footer>
+  <div id="site_footer" style="background: black;">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-md-8">
+          <p style="color: white;">© 2023 Мой сайт. Все права защищены.</p>
+        </div>
+      </div>
     </div>
   </div>
-</div>
+
+</footer>
 </html>
