--- a/src/main/resources/static/account.css
+++ b/src/main/resources/static/account.css
@@ -81,7 +81,24 @@ header ul li ul li a {
     color: #eac7df;
 }
 
-
+/* Стили для аккаунта */
+.account_div {
+    background: #f8f4ff;
+    height: 320px;
+    margin-top: 30px;
+    margin-left: 50px;
+    border-radius: 20px;
+}
+.account_div2 {
+    background: #ebc7df;
+    height: 120px;
+    margin-top: 50px;
+    border-radius: 20px;
+    text-align: right;
+}
+.margin-top-20 {
+    margin-top: 20px;
+}
 
 /* Стили для подвала */
 .footer {
