--- a/src/main/resources/static/account.css
+++ b/src/main/resources/static/account.css
@@ -84,9 +84,8 @@ header ul li ul li a {
 /* Стили для аккаунта */
 .account_div {
     background: #f8f4ff;
-    height: 320px;
+    height: 420px;
     margin-top: 30px;
-    margin-left: 50px;
     border-radius: 20px;
 }
 .account_div2 {
@@ -94,11 +93,47 @@ header ul li ul li a {
     height: 120px;
     margin-top: 50px;
     border-radius: 20px;
-    text-align: right;
+    text-align: left;
 }
 .margin-top-20 {
     margin-top: 20px;
 }
+
+.recommend_div {
+    background: #f8f4ff;
+    height: 420px;
+    margin-top: 30px;
+    margin-left: 50px;
+    border-radius: 20px;
+}
+.recommend_div2 {
+    background: #ebc7df;
+    height: 120px;
+    margin-top: 50px;
+    border-radius: 20px;
+    text-align: right;
+}
+
+.figure_div {
+    object-fit: cover;
+    object-position: top center;
+    border-radius:50%;
+    width: 130px;
+    height: 130px;
+    margin-top: 35px;
+    margin-left: 35px;
+    background: white;
+}
+.figure_img {
+    object-fit: cover;
+    object-position: top center;
+    border-radius:50%;
+    width: 120px;
+    height: 120px;
+    margin-top: 5px;
+    margin-left: 5px;
+}
+
 
 /* Стили для подвала */
 .footer {
