--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,13 +30,20 @@
                     <li><a href="/">Главная</a> </li>
                     <li>
                         <div th:switch="${userLogin}">
-                            <a href="/account" th:case="null"><i class="fa-solid fa-user"></i>Аккаунт</a>
-                            <a href="/account" th:case="*" th:text="${userLogin.login}"></a>
+                            <div th:case="null">
+                                <a href="/account"><i class="fa-solid fa-user"></i>Аккаунт</a>
+                                <ul>
+                                    <li><a href="/new">Регистрация</a></li>
+                                    <li><a href="/log">Авторизация</a></li>
+                                </ul>
+                            </div>
+                            <div th:case="*">
+                                <a href="/account" th:text="${userLogin.login}"></a>
+                                <ul>
+                                    <li><a href="/exit">Выйти</a></li>
+                                </ul>
+                            </div>
                         </div>
-                        <ul>
-                            <li><a href="/new">Регистрация</a></li>
-                            <li><a href="/log">Авторизация</a></li>
-                        </ul>
                     </li>
                 </ul>
             </nav>
