--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -96,15 +96,16 @@
         </div>
     </div>
 </div>
-
-
-<div class="footer container-fluid">
-    <div class="footer-content container">
-        <div class="row">
-            <p>© 2023 Мой сайт. Все права защищены.</p>
+</body>
+<footer role="contentinfo">
+    <div id="site_footer" style="background: black;">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-8">
+                    <p style="color: white;">© 2023 Мой сайт. Все права защищены.</p>
+                </div>
+            </div>
         </div>
     </div>
-</div>
-
-</body>
+</footer>
 </html>
