--- a/src/main/resources/templates/authorization.html
+++ b/src/main/resources/templates/authorization.html
@@ -29,14 +29,21 @@
         <ul>
           <li><a href="/">Главная</a> </li>
           <li>
-              <div th:switch="${userLogin}">
-                <a href="/acc" th:case="null"><i class="fa-solid fa-user"></i>Аккаунт</a>
-                <a href="/acc" th:case="*">${userLogin.login}</a>
+            <div th:switch="${userLogin}">
+              <div th:case="null">
+                <a href="/account"><i class="fa-solid fa-user"></i>Аккаунт</a>
+                <ul>
+                  <li><a href="/new">Регистрация</a></li>
+                  <li><a href="/log">Авторизация</a></li>
+                </ul>
               </div>
-            <ul>
-              <li><a href="/new">Регистрация</a></li>
-              <li><a href="/log">Авторизация</a></li>
-            </ul>
+              <div th:case="*">
+                <a href="/account" th:text="${userLogin.login}"></a>
+                <ul>
+                  <li><a href="/exit">Выйти</a></li>
+                </ul>
+              </div>
+            </div>
           </li>
         </ul>
       </nav>
@@ -68,6 +75,7 @@
     </div>
   </form>
 </div>
+</body>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
   $(document).ready(function() {
@@ -113,13 +121,15 @@
   }
 </script>
 
-<div class="footer container-fluid">
-  <div class="footer-content container">
-    <div class="row">
-      <p>© 2023 Мой сайт. Все права защищены.</p>
+<footer>
+  <div id="site_footer" style="background: black;">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-md-8">
+          <p style="color: white;">© 2023 Мой сайт. Все права защищены.</p>
+        </div>
+      </div>
     </div>
   </div>
-</div>
-
-</body>
+</footer>
 </html>
