--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -3,6 +3,7 @@
 <head>
   <title>IG</title>
   <link rel="stylesheet" th:href="@{/account.css}" />
+  <link rel="stylesheet" th:href="@{/color.css}" />
   <!--Картинки-->
   <script src="https://kit.fontawesome.com/9e56eb5395.js" crossorigin="anonymous"></script>
 
@@ -17,37 +18,37 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-nU14brUcp6StFntEOOEBvcJm4huWjB0OcIeQ3fltAfSmuZFrkAif0T+UtNGlKKQv" crossorigin="anonymous">
 </head>
-  <header class="container-fluid">
-    <div class="container">
-      <div class="row">
-        <div class="col-4">
-          <h1><a href="/">IG</a></h1>
-        </div>
-        <nav class="col-8">
-          <ul>
-            <li><a href="/">Главная</a> </li>
-            <li>
-              <div th:switch="${userLogin}">
-                <div th:case="null">
-                  <a href="/account"><i class="fa-solid fa-user"></i>Аккаунт</a>
-                  <ul>
-                    <li><a href="/new">Регистрация</a></li>
-                    <li><a href="/log">Авторизация</a></li>
-                  </ul>
-                </div>
-                <div th:case="*">
-                  <a href="/account" th:text="${userLogin.login}"></a>
-                  <ul>
-                    <li><a href="/exit">Выйти</a></li>
-                  </ul>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </nav>
+<header class="container-fluid">
+  <div class="container">
+    <div class="row">
+      <div class="col-4">
+        <h1><a href="/">IG</a></h1>
       </div>
+      <nav class="col-8">
+        <ul>
+          <li><a href="/group">Сообщества</a> </li>
+          <li>
+            <div th:switch="${userLogin}">
+              <div th:case="null">
+                <a href="/log"><i class="fa-solid fa-user"></i>Аккаунт</a>
+                <ul>
+                  <li><a href="/new">Регистрация</a></li>
+                  <li><a href="/log">Авторизация</a></li>
+                </ul>
+              </div>
+              <div th:case="*">
+                <a href="/account" th:text="${userLogin.login}"></a>
+                <ul>
+                  <li><a href="/exit">Выйти</a></li>
+                </ul>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </nav>
     </div>
-  </header>
+  </div>
+</header>
 
 <div class="container text-center account_form">
   <div class="row row-cols-auto">
@@ -106,11 +107,35 @@
           <br/>
           <p>Ваши сообщества:</p>
         </div>
+        <table>
+          <tbody>
+          <tr th:if="${groups.isEmpty()}">
+            </br>
+            <p style="justify-content: center;"> Нет сообществ </p>
+          </tr>
+          <tr th:each="group : ${groups}">
+            <td>
+              <div class="recommend_div3" >
+                <div class="row">
+                <div class="col-1">
+                <img class="figure_img" style="width: 80px; height: 80px; margin-left: 5px" alt="image" th:src="${group.getAvtar()}"/>
+                </div>
+                <div class="col-4 col-md-9">
+                <p style="font-size: 20px" th:text="${group.getName()}"> Имя </p>
+                <p th:text="${group.getSubscribes()}"> Подписки </p>
+                </div>
+                </div>
+              </div>
+            </td>
+          </tr>
+          </tbody>
+        </table>
       </div>
     </div>
-    <div class="col"></div>
   </div>
 </div>
+
+
 
 </div>
   <div class="container text-center account_form">
@@ -123,6 +148,14 @@
               <div class="container">
                 <input type="color" id="primary_color" class="field-radio color">
                 <input type="text" class="form-control" id="textColor" placeholder="#XXXXXX" data-value="#xxxxxx"/>
+              </div>
+              <br/>
+            </div>
+            <div class="w-100"></div>
+            <div class="mb-3 col-12 col-md-6">
+              <div class="container">
+                <input type="color" id="second_color" class="field-radio color">
+                <input type="text" class="form-control" id="textSecondColor" placeholder="#XXXXXX" data-value="#xxxxxx"/>
               </div>
               <br/>
             </div>
@@ -144,6 +177,7 @@
     let colorDiv = document.getElementById("textColor");
     colorButton.oninput = function() {
       colorDiv.value = colorButton.value;
+      document.documentElement.style.setProperty('--main-color', colorButton.value);
     }
   });
   var colorDiv = document.getElementById('textColor');
@@ -151,6 +185,23 @@
     if (/#([a-f]|[A-F]|[0-9]){3}(([a-f]|[A-F]|[0-9]){3})?\b/.test(colorDiv.value)){
       let colorButton = document.getElementById("primary_color");
       colorButton.value = colorDiv.value;
+      document.documentElement.style.setProperty('--main-color', colorDiv.value);
+    }
+  });
+  $("input.color").each(function() {
+    let colorButton2 = document.getElementById("second_color");
+    let colorDiv2 = document.getElementById("textSecondColor");
+    colorButton2.oninput = function() {
+      colorDiv2.value = colorButton2.value;
+      document.documentElement.style.setProperty('--second-color', colorButton2.value);
+    }
+  });
+  var colorDiv2 = document.getElementById('textSecondColor');
+  colorDiv2.addEventListener('input', function() {
+    if (/#([a-f]|[A-F]|[0-9]){3}(([a-f]|[A-F]|[0-9]){3})?\b/.test(colorDiv2.value)){
+      let colorButton2 = document.getElementById("second_color");
+      colorButton2.value = colorDiv2.value;
+      document.documentElement.style.setProperty('--second-color', colorDiv2.value);
     }
   });
 </script>
